# SDL3Project

./: .gitignore  CMakeLists.txt  main.cpp
MANAGER/: Game.cpp  Game.h
PLAYER/: Player.cpp  Player.h  PlayerMovement.cpp  PlayerMovement.h
UI/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
WORLDOBJECT/: Rock.cpp  Rock.h
